src/test/resources/failing/fail-S0.pnd
Foo(x) <- a = 42, b = a * 10, x = b + 2
Num(x) : int
Bar(a) <- b = 42 + a, a = b + 2, Num(b)